Adds Angular Material to to the project and creates some additional modules

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<h1>My first Angular App!</h1>
+<app-header></app-header>
+<main>
+  <app-post-create></app-post-create>
+  <app-post-list></app-post-list>
+</main>
+
