--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,7 +1,18 @@
 <mat-card>
-  <mat-form-field>
-    <textarea matInput rows="6" [(ngModel)]="enteredValue" ></textarea>
-  </mat-form-field>
-  <button mat-raised-button color="accent" (click)="onAddPost()" >Save Post</button>
+  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+
+    <mat-form-field>
+      <input matInput type="text" name="title" ngModel required #title="ngModel">
+    </mat-form-field>
+    <mat-error *ngIf="title.invalid">Please, enter a post title!</mat-error>
+
+    <mat-form-field>
+      <textarea matInput rows="4" name="content" ngModel required #content="ngModel"></textarea>
+    </mat-form-field>
+    <mat-error *ngIf="content.invalid">Please, enter a content message!</mat-error>
+
+    <button mat-raised-button color="accent" type="submit" >Save Post</button>
+
+  </form>
 </mat-card>
 
