Does some enhancements to the app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-header></app-header>
 <main>
-  <app-post-create (postCreatedEvent)="onPostAdded($event)"></app-post-create>
-  <app-post-list ></app-post-list>
+  <router-outlet></router-outlet>
 </main>
 
