--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,14 +1,22 @@
 <mat-card>
-  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
 
     <mat-form-field>
-      <input matInput type="text" name="title" ngModel required #title="ngModel" placeholder="Post Title">
+      <input matInput type="text" name="title"
+      [ngModel]="post?.title"
+      required #title="ngModel" placeholder="Post Title">
+      <mat-error *ngIf="title.invalid">Please, enter a post title!</mat-error>
     </mat-form-field>
-    <mat-error *ngIf="title.invalid">Please, enter a post title!</mat-error>
-
+<div>
+  <button mat-stroked-button type="button" (click)="filePicker.click()">Pick an image...</button>
+  <input type="file" #filePicker>
+</div>
     <mat-form-field>
-      <textarea matInput rows="4" name="content" ngModel required #content="ngModel" placeholder="Post Content">
-        
+      <textarea matInput rows="4" name="content"
+      [ngModel]="post?.content"
+      required #content="ngModel" placeholder="Post Content">
+
       </textarea>
     </mat-form-field>
     <mat-error *ngIf="content.invalid">Please, enter a content message!</mat-error>
